# Bezier-Curve

./: .gitignore  Bezier Curve.py  BezierCurve.py  BezierCurveApp.py  Pipfile  pyproject.toml  readme.md  test.py
