[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bezier-curve"
version = "0.1.0"
description = "Bezier Curve Project"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "cython",
    "pygame",
]

[tool.setuptools]
packages = []
